# sleeplab-tf-dataset

./: README.md  pyproject.toml
sleeplab_tf_dataset/: dataset.py
src/sleeplab_tf_dataset/: __init__.py  compose.py  config.py  dataset.py
tests/: conftest.py  test_config.py  test_dataset.py
tests/data/: example_config.yml
